16:9 ratio for news items for obliviot theme

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationBlogComponent.html
@@ -23,7 +23,7 @@
    <body>
       <div data-component-name="dark_OrganizationBlogComponent">
         <div class="ui stackable two column grid">
-            <div class="seven wide column">
+            <div class="column" style="width:66.66%;">
                 <div class="classes.obliviot_darkBlogMaxContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_1);}}">
                     <img class="classes.obliviot_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
                     <div class="classes.obliviot_dark_main_news_content_container">
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div class="nine wide column">
+            <div class="column" style="width:33.33%;">
                 <div class="classes.obliviot_darkBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_2);}}">
                     <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_mini_image.jpg" />    
                     <div class="classes.obliviot_dark_main_news_content_container">
