tweaks and fixes for 16:9 ration across all themes for blog/news

--- a/content_builder/src/html/themes/felzec/light/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationBlogComponent.html
@@ -27,7 +27,7 @@
             <div class="classes.felzec_blog_filter_container" data-component-props="style={this.props.filter_style}"></div>
             <div class="classes.felzec_blog_inner_container">
                 <div class="ui stackable three column grid">
-                    <div class="column">
+                    <div class="eight wide column">
                         <div class="classes.felzec_lightBlogMaxContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_1);}}">
                             <img class="classes.felzec_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
                             <div class="classes.obliviot_light_main_news_content_container">
@@ -43,7 +43,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column">
+                    <div class="four wide column">
                         <div class="classes.felzec_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_2);}}">
                             <img class="classes.felzec_main_news_item_mini_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_mini_image.jpg" />    
                             <div class="classes.obliviot_light_main_news_content_container">
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column">
+                    <div class="four wide column">
                         <div class="classes.felzec_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_4);}}">
                             <img class="classes.felzec_main_news_item_mini_image" data-component-props="src={this.props.blog_media_4}" src="../images/news_mini_image.jpg" />    
                             <div class="classes.obliviot_light_main_news_content_container">
