--- a/content_builder/src/html/themes/mobile/dark/OrganizationNewsComponent.html
+++ b/content_builder/src/html/themes/mobile/dark/OrganizationNewsComponent.html
@@ -22,7 +22,7 @@
    </head>
    <body>
         <div data-component-name="dark_OrganizationNewsComponent">
-            <div style="width:60%;margin-left:auto;margin-right:auto;">
+            <div style="width:100%;max-width:1000px;margin-left:auto;margin-right:auto;">
                 <div class="classes.obliviot_dark_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog);}}">
                     <img class="classes.obliviot_main_news_item_micro_image" data-component-props="src={this.props.blog_media}" src="../images/news_mini_image.jpg" />    
                     <div class="classes.obliviot_dark_main_news_content_container">
