--- a/content_builder/src/html/themes/obliviot/light/OrganizationNewsComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationNewsComponent.html
@@ -21,19 +21,22 @@
       </script>    
    </head>
    <body>
-      <div data-component-name="light_OrganizationNewsComponent">
-        <div class="classes.obliviot_light_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog);}}">
-            <img class="classes.obliviot_main_news_item_micro_image" data-component-props="src={this.props.blog_media}" src="../images/news_mini_image.jpg" />    
-            <div class="classes.obliviot_light_main_news_content_container">
-                <div>
-                    <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                        <span class="classes.obliviot_light_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
+        <div data-component-name="light_OrganizationNewsComponent">
+            <div style="width:100%;max-width:1000px;margin-left:auto;margin-right:auto;">
+                <div class="classes.obliviot_dark_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog);}}">
+                    <img class="classes.obliviot_main_news_item_micro_image" data-component-props="src={this.props.blog_media}" src="../images/news_mini_image.jpg" />    
+                    <div class="classes.obliviot_dark_main_news_content_container">
+                        <div>
+                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
+                                <span class="classes.obliviot_dark_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
+                            </div>
+                        </div>
+                        <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
+                            <span class="classes.obliviot_dark_news_body" data-component-value="{this.props.blog_content}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
+                        </div>
+                        <div class="classes.obliviot_dark_news_decor"></div>
                     </div>
                 </div>
-                <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
-                    <span class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
-                </div>
-                <div class="classes.obliviot_light_news_decor"></div>
             </div>
         </div>
    </body>
