--- a/content_builder/src/html/themes/admin/OrganizationAdminBlogComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminBlogComponent.html
@@ -50,6 +50,7 @@
                             </label>
                             <input type="file" id="hidden-new-file" style="display: none" onchange="readURL(this);">
                         </div>
+                        <h2>16:9 ratio images used for all themes</h2>
                         <div class="classes.modal_blog_media_container">
                             <img class="classes.modal_blog_media_preview" id="blog_media_preview" />
                         </div>
