--- a/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
@@ -23,7 +23,7 @@
    </head>
    <body>
       <div data-component-name="OrganizationAdminMenuComponent" class="">
-             <div class="ui bottom segment">
+             <div>
             <div class="ui inverted labeled icon left inline  vertical menu"> 
             <div class="classes.menu_box_container">
             <div class="classes.menu_title_container">
