Change About page to make it more clear to the users

--- a/content_builder/src/html/themes/admin/OrganizationAdminAboutComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminAboutComponent.html
@@ -24,7 +24,7 @@
    <body>
       <div data-component-name="OrganizationAdminAboutComponent" class="">
             <div class="classes.admin_title_box">
-                    <h2>Manage Pages</h2>
+                    <h2>Manage About Page</h2>
                 </div>
                 <div class="classes.admin_search_container">
                     <div class="ui action fluid input">
