changed login_ind to have sign up button

--- a/content_builder/src/html/themes/base/LoginComponent.html
+++ b/content_builder/src/html/themes/base/LoginComponent.html
@@ -54,6 +54,9 @@
                                 <div data-component-value="{this.props.forgotPasswordButton}">
                                     <div class="ui fluid large teal submit button" style="background: #0a9ab4;font-size:18px;margin-top:40px;">Forgot Password?</div>
                                 </div>
+                                <div data-component-value="{this.props.needAccountButton}">
+                                    <div class="ui fluid large teal submit button" style="background: #0a9ab4;font-size:18px;margin-top:40px;">Sign Up Here</div>
+                                </div>
                         <div class="ui error message"></div>
                      </form>
                 </div>
